dev-gui - gui finished

--- a/deda_gui/web/contact.html
+++ b/deda_gui/web/contact.html
@@ -13,7 +13,7 @@
     <!-- CSS Import-->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/dedastyle.css" rel="stylesheet">
-    <link href="css/fontawesome-all.css" rel="stylesheet">
+    <link href="css/fontawesome.min.css" rel="stylesheet">
     <!-- EEL -->
     <script type='text/javascript' src='/eel.js'></script>
 
@@ -49,18 +49,8 @@
 
     <!-- JavaScript Ext-->
     <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-
-    <!-- Sidebar -->
-    <script type="text/javascript">
-        $("#menu-toggle").click(function(e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-        $(document).ready(function(){
-            $('#sidebar-wrapper').load('sidebar.html');
-        });
-    </script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/deda.js"></script>
 
 </body>
 
