--- a/deda_gui/web/de/sidebar.html
+++ b/deda_gui/web/de/sidebar.html
@@ -4,7 +4,8 @@
             Deda Toolkit
         </a>
     </li>
-    <li>
+    <br>
+    <li style="margin-bottom:13px;">
         <a href="index.html">Home</a>
     </li>
     <li>
@@ -13,13 +14,16 @@
     <li>
         <a href="comparison.html">Mustervergleich</a>
     </li>
+    <li style="margin-bottom:13px;">
+        <a href="generate.html">Pattern Generierung</a>
+    </li>
     <li>
         <a href="scananon.html">Scan Anonymisierung</a>
     </li>
     <li>
         <a href="printanon.html">Generierung der Druckmaske</a>
     </li>
-    <li>
+    <li style="margin-bottom:13px;">
         <a href="printanon2.html">Druck Anonymisierung</a>
     </li>
     <li>
