--- a/deda_gui/web/sidebar.html
+++ b/deda_gui/web/sidebar.html
@@ -4,7 +4,8 @@
             Deda Toolkit
         </a>
     </li>
-    <li>
+    <br>
+    <li style="margin-bottom:13px;">
         <a href="index.html">Home</a>
     </li>
     <li>
@@ -13,13 +14,16 @@
     <li>
         <a href="comparison.html">Pattern Comparison</a>
     </li>
+    <li style="margin-bottom:13px;">
+        <a href="generate.html">Generate Pattern</a>
+    </li>
     <li>
         <a href="scananon.html">Scan Anonymization</a>
     </li>
     <li>
         <a href="printanon.html">Generate Print Mask</a>
     </li>
-    <li>
+    <li style="margin-bottom:13px;">
         <a href="printanon2.html">Print Anonymization</a>
     </li>
     <li>
